change NETCONF port on router config change demo IP address on firefly2 because it happend SSH connection Error

--- a/firefly1.conf
+++ b/firefly1.conf
@@ -29,9 +29,7 @@ system {
             root-login allow;
         }
         netconf {
-            ssh {
-                port 22;
-            }
+            ssh;
         }
         web-management {
             http {
