--- a/firefly2.conf
+++ b/firefly2.conf
@@ -29,9 +29,7 @@ system {
             root-login allow;
         }
         netconf {
-            ssh {
-                port 22;
-            }
+            ssh;
         }
         web-management {
             http {
